--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site.defaultLanguage }}">
 	<head>
-		{# <meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>{{ site.title }}</title>
-		<link rel="stylesheet" href="/assets/css/index.css">
-		<script src="/assets/js/index.js" defer></script>
+		<baseline-head></baseline-head>
 		<meta name="generator" content="{{ eleventy.generator }}">
-		<meta name="description" content="{{ description | default(site.tagline) }}">
-		{% if site.noindex %}
-		<meta name="robots" content="noindex, nofollow">
-		{% endif %} #}
-		<posthtml-head-elements></posthtml-head-elements>
-		<link rel="stylesheet" href="/assets/css/index.css">
 	</head>
 	<body>
 		<a href="#main" class="skip-link">
