--- a/src/assets/css/elements/base.css
+++ b/src/assets/css/elements/base.css
@@ -1,14 +1,67 @@
 body {
-	max-width: 120rem;
-	margin-inline: auto;
-	padding-inline: 1.25rem;
+	max-width: var(--wrapper-max-width);
+	margin-inline: var(--wrapper-margin-inline);
+	padding-inline: var(--wrapper-padding-inline);
 	box-sizing: content-box;
+	display: flex;
+	flex-direction: column;
 }
 
-main > p + * {
+body {
+	font-family: var(--font-family-body);
+	font-size: var(--body-text-size);
+	line-height: var(--body-line-height);
+	color: var(--text-color);
+	background-color: var(--surface-color);
+}
+
+main>*+p,
+main>*+h3,
+main>*+blockquote {
 	margin-block-start: 1em;
+}
+
+header,
+main,
+footer {
+	padding-block: 1rem;
+}
+
+footer {
+	margin-block-start: auto;
 }
 
 p {
 	max-width: 75ch;
+}
+
+
+a {
+	color: var(--link-color);
+}
+
+a:hover {
+	color: var(--link-color-hover);
+}
+
+pre, code:not(pre code) {
+	background: var(--surface-color-subtle);
+}
+
+pre {
+	border: 0.0625em solid var(--border-color);
+	padding: 0.5em;
+	padding-inline-end: 0.75em;
+	box-sizing: content-box;
+	max-width: fit-content;
+}
+
+blockquote {
+	border: 0.0625em solid var(--border-color);
+	border-left: 0.16em solid var(--accent-color);
+	padding: 0.5em;
+	padding-inline-end: 0.75em;
+	box-sizing: content-box;
+	max-width: fit-content;
+	vertical-align: middle;
 }
