--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,9 +1,14 @@
 /* 01. Settings */
+@import "./settings/colors.css";
+@import "./settings/type.css";
+@import "./settings/space.css";
 
 /* 02. Tools */
 
 /* 03. Generic */
 @import "./generic/modern-reset.css" layer(reset);
+@import "./generic/semantic-tokens.css" layer(tokens);
+@import "./generic/elements-defaults.css" layer(tokens);
 
 /* 04. Elements */
 @import "./elements/base.css";
@@ -14,6 +19,7 @@
 /* 06. Components */
 
 /* 07. Utilities */
+@import "./utilities/prism.css";
 
 /* CSS is organised followng ITCSS and BEMIT naming conventions, see:
 @link: https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/
