--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,7 +11,7 @@
 		<header>
 			<h1>{{ site.title }}</h1>
 			<p>{{ site.tagline }}</p>
-			<p><a href="{{ site.baseURL | htmlBaseUrl}}">Home</a></p>
+			<p><a href="{{ site.baseURL | htmlBaseUrl}}">Homepage</a></p>
 		</header>
 		<main id="main" tabindex="-1">
 			<h2>{{ title }}</h2>
