Add p tag to alert message

--- a/src/content/en/pages/index.njk
+++ b/src/content/en/pages/index.njk
@@ -11,7 +11,7 @@ permalink: /
 	<p><strong>Eleventy Baseline</strong> is an experimental Swiss army knife for Eleventy: small, prewired helpers for assets, head/meta, images, and debug so you spend less time wiring the same pieces.</p>
 
 	{% alertBlock "info" %}
-		Work in progress: docs and APIs may shift. Start with the getting-started docs below.
+		<p>Work in progress: docs and APIs may shift. Start with the getting-started docs below.</p>
 	{% endalertBlock %}
 
 	{% include "layouts/components/docs-toc.njk" %}
