--- a/src/content/en/pages/index.njk
+++ b/src/content/en/pages/index.njk
@@ -8,7 +8,7 @@ permalink: /
 {% block content %}
 	<h1>{{ title }}</h1>
 
-	<p><strong>Eleventy Baseline</strong> is an experimental Swiss army knife for Eleventy: small, prewired helpers for assets, head/meta, images, and debug so you spend less time wiring the same pieces.</p>
+	<p><strong>Eleventy Plugin Baseline</strong> is an experimental Swiss army knife for Eleventy: small, prewired helpers for assets, head/meta, images, and debug so you spend less time wiring the same pieces.</p>
 
 	{% alertBlock "info" %}
 		<p>Work in progress: docs and APIs may shift. Start with the getting-started docs below.</p>
